# Rust-Python-AI-Comparison

./: .gitignore  README.md
DecisionTree/python/: decisionTree.py
DecisionTree/python/time_log/: cnn_time_log_20250609-162749.txt
DecisionTree/rust/: Cargo.toml
DecisionTree/rust/src/: main.rs
DecisionTree/rust/time_log/: cnn_time_log_20250609-162517.txt  cnn_time_log_20250613-091535.txt
FruitsRecognitionUsingCNN/: README.md
FruitsRecognitionUsingCNN/python/: TimeMeasuring.py  cnn.py  explore.py
FruitsRecognitionUsingCNN/python/artifacts/: README.md
FruitsRecognitionUsingCNN/python/artifacts/time_log/: cnn_time_log20250514-192055.txt
FruitsRecognitionUsingCNN/rust/: Cargo.toml
FruitsRecognitionUsingCNN/rust/experimental_logs/: debug_log.txt
FruitsRecognitionUsingCNN/rust/experimental_logs/run1/: README.md  training_visualization.py
FruitsRecognitionUsingCNN/rust/experimental_logs/run2/: README.md
FruitsRecognitionUsingCNN/rust/experimental_logs/run3/: README.md
FruitsRecognitionUsingCNN/rust/experimental_logs/run4/: README.md
FruitsRecognitionUsingCNN/rust/experimental_logs/run5/: REAME.md
FruitsRecognitionUsingCNN/rust/experimental_logs/run6/: README.md
FruitsRecognitionUsingCNN/rust/experimental_logs/run7/: README.md
FruitsRecognitionUsingCNN/rust/src/: batcher.rs  data_processing.rs  fruits_dataset.rs  inference.rs  main.rs  model.rs  time_measuring.rs  training.rs  visualisation.rs
MatrixOperations/Python/: ndarry.py
MatrixOperations/Rust/: Cargo.toml  build.rs
MatrixOperations/Rust/src/: main.rs
(+21 files in other folders)
